--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,10 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.0.3
   intl: ^0.17.0
-  qr_code_scanner: ^1.0.0
-
+  flutter_barcode_scanner: ^2.0.0
+  firebase_dynamic_links: ^4.2.6
+  lottie: ^1.3.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
