--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,11 @@ dependencies:
   get_storage: ^2.0.3
   intl: ^0.17.0
   flutter_barcode_scanner: ^2.0.0
-  firebase_dynamic_links: ^4.2.6
   lottie: ^1.3.0
-  
+  image_picker: ^0.8.5+3
+  sn_progress_dialog: ^1.0.8
+  qr_flutter: ^4.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
