--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.5+3
   sn_progress_dialog: ^1.0.8
   qr_flutter: ^4.0.0
+  woocommerce_api: ^0.1.0
 
 dev_dependencies:
   flutter_test:
