--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   sn_progress_dialog: ^1.0.8
   qr_flutter: ^4.0.0
   woocommerce_api: ^0.1.0
+  scroll_navigation: ^1.3.2
 
 dev_dependencies:
   flutter_test:
