--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   qr_flutter: ^4.0.0
   woocommerce_api: ^0.1.0
   scroll_navigation: ^1.3.2
+  flutter_image_slideshow: ^0.1.2
 
 dev_dependencies:
   flutter_test:
