--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   woocommerce_api: ^0.1.0
   scroll_navigation: ^1.3.2
   flutter_image_slideshow: ^0.1.2
-
+  expandable_text: ^2.3.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
