--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   scroll_navigation: ^1.3.2
   flutter_image_slideshow: ^0.1.2
   expandable_text: ^2.3.0
-  
+  animate_icons: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
