--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,9 @@ dependencies:
   flutter_image_slideshow: ^0.1.2
   expandable_text: ^2.3.0
   animate_icons: ^2.0.0
-
+  badges: ^2.0.3
+  logger: ^1.1.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
