--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   animate_icons: ^2.0.0
   badges: ^2.0.3
   logger: ^1.1.0
+  collection: ^1.14.13
   
 dev_dependencies:
   flutter_test:
