--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   logger: ^1.1.0
   collection: ^1.14.13
   http: ^0.13.4
+  firebase_messaging: ^11.4.4
+  flutter_local_notifications: ^9.7.0
+  firebase_core: ^1.19.1
   
 dev_dependencies:
   flutter_test:
